--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -18,6 +18,8 @@ lto = "thin"
 [dependencies]
 js-sys = "0.3.57"
 wasm-bindgen = "0.2.80"
+rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
@@ -33,5 +35,6 @@ features = [
   'WebGl2RenderingContext',
   'WebGlProgram',
   'WebGlShader',
+  'WebGlUniformLocation',
   'Window',
 ]
